--- a/index.html
+++ b/index.html
@@ -24,14 +24,18 @@
             font-weight: 700;
         }
 
+        /* --- THIS IS THE UPDATED SECTION --- */
         .hero-section {
-            background-image: linear-gradient(rgba(0, 0, 0, 0.6), rgba(0, 0, 0, 0.6)), url('https://images.unsplash.com/photo-1518770660439-4636190af475?auto=format&fit=crop&w=1920&q=80');
+            /* New Smart City / IoT Network Image */
+            background-image: linear-gradient(rgba(0, 0, 0, 0.65), rgba(0, 0, 0, 0.65)), url('https://images.unsplash.com/photo-1533425332312-58e63b65b716?auto=format&fit=crop&w=1920&q=80');
             background-size: cover;
             background-position: center;
+            
             color: white;
             padding: 100px 0;
             text-align: center;
         }
+        /* --- END OF UPDATE --- */
 
         .hero-section h1 {
             font-size: 3.5rem;
@@ -109,7 +113,7 @@
             color: #2563eb;
         }
 
-        /* --- NEW: Custom Cursor Dot --- */
+        /* --- Custom Cursor Dot --- */
         #cursor-dot {
             width: 8px;
             height: 8px;
@@ -124,7 +128,7 @@
             transition: transform 0.1s ease-out;
             transform: translate(-100%, -100%); /* Start hidden */
         }
-        /* --- End of New CSS --- */
+        /* --- End of Custom Cursor CSS --- */
 
     </style>
 </head>
@@ -464,6 +468,6 @@
              cursorDot.style.opacity = '1';
         });
     });
-    </script>
+    </Fscript>
     </body>
 </html>
