Fix HTML syntax errors in index.html

--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@
                             <div class="card-body">
                                 <h4 class="card-title text-center"><i class="fas fa-wifi card-title-icon"></i> IoT Protocols</h4>
                                 <hr>
-                                <div class_ ="text-center">
+                                <div class="text-center">
                                     <span class="badge bg-primary skill-badge">LoRaWAN / Sigfox / Zigbee</span>
                                     <span class="badge bg-primary skill-badge">MQTT / CoAP / WiFi</span>
                                     <span class="badge bg-secondary skill-badge">CAN / FlexRay / I²C / SPI</span>
@@ -452,7 +452,7 @@
                         <p class="mb-1 text-muted">Hainan Normal University, China</p>
                         <small><strong>Thesis:</strong> Intelligent home system design and Implementation</small>
                     </li>
-                    <li class="list-group-item p-3">
+                    <li class.list-group-item p-3">
                         <h5 class="mb-1">Diploma in Computer Engineering</h5>
                         <p class="mb-1 text-muted">Pokhara Engineering College, Nepal</p>
                     </li>
