Fix HTML formatting and minor style adjustments

--- a/index.html
+++ b/index.html
@@ -54,10 +54,9 @@
         }
         
         .hero-title-container {
-            /* Use flexbox to align "Hi," and the GIF */
             display: flex;
-            align-items: baseline; /* Aligns their bottoms */
-            flex-wrap: wrap; /* Allows wrap on small screens */
+            align-items: baseline; 
+            flex-wrap: wrap; 
             margin-bottom: 20px;
         }
 
@@ -68,14 +67,13 @@
             font-family: 'Playfair Display', serif;
             color: #212529;
             margin: 0;
-            margin-right: 1.5rem; /* Space between "Hi," and "Welcome" */
+            margin-right: 1.5rem; 
         }
         
-        /* NEW: Style for the "Welcome" GIF */
+        /* Style for the "Welcome" GIF */
         .hero-title-container img {
             height: 99px; /* The height from your <img> tag */
             width: 111px; /* The width from your <img> tag */
-            /* Adjust vertical alignment */
             position: relative;
             top: -10px; 
         }
@@ -289,7 +287,7 @@
                 <div class="row">
                     <div class="col-md-6 col-lg-4 mb-4">
                         <div class="card h-100 skill-card">
-                            <div class="card-body">
+                            <div classs="card-body">
                                 <h4 class="card-title text-center"><i class="fas fa-microchip card-title-icon"></i> Embedded Systems</h4>
                                 <hr>
                                 <div class="text-center">
