--- a/index.html
+++ b/index.html
@@ -54,9 +54,10 @@
         }
         
         .hero-title-container {
+            /* Use flexbox to align "Hi," and the GIF */
             display: flex;
-            align-items: baseline; 
-            flex-wrap: wrap; 
+            align-items: baseline; /* Aligns their bottoms */
+            flex-wrap: wrap; /* Allows wrap on small screens */
             margin-bottom: 20px;
         }
 
@@ -67,7 +68,7 @@
             font-family: 'Playfair Display', serif;
             color: #212529;
             margin: 0;
-            margin-right: 1.5rem; 
+            margin-right: 1.5rem; /* Space between "Hi," and "Welcome" */
         }
         
         /* Style for the "Welcome" GIF */
@@ -287,7 +288,7 @@
                 <div class="row">
                     <div class="col-md-6 col-lg-4 mb-4">
                         <div class="card h-100 skill-card">
-                            <div classs="card-body">
+                            <div class="card-body">
                                 <h4 class="card-title text-center"><i class="fas fa-microchip card-title-icon"></i> Embedded Systems</h4>
                                 <hr>
                                 <div class="text-center">
