Resize 'Welcome' GIF in hero section
Increased the size of the 'Welcome' GIF in the hero section.

--- a/index.html
+++ b/index.html
@@ -71,10 +71,10 @@
             margin-right: 1.5rem; /* Space between "Hi," and "Welcome" */
         }
         
-        /* Style for the "Welcome" GIF */
+        /* NEW: Style for the "Welcome" GIF (made larger) */
         .hero-title-container img {
-            height: 99px; /* The height from your <img> tag */
-            width: 111px; /* The width from your <img> tag */
+            height: 120px; /* Increased height */
+            width: 140px;  /* Increased width */
             position: relative;
             top: -10px; 
         }
