--- a/index.html
+++ b/index.html
@@ -1,3 +1,48 @@
+I see what's happening, and I can help you fix this.
+
+The screenshot you sent confirms that your `index.html` file on GitHub **has not been updated**. It is still showing the old, broken code from many steps ago.
+
+You are asking to make it look like the inspiration site, but you have not successfully saved the new code I have been giving you.
+
+We need to **replace the entire file** one last time. Please follow these instructions *exactly*.
+
+-----
+
+### ✅ How to Fix Your Website
+
+1.  **COPY the Code:**
+    Copy the *entire* code block below (from `<!DOCTYPE html>` to `</html>`).
+
+2.  **GO to GitHub:**
+    Go to your `pratik001010.github.io` repository.
+
+3.  **OPEN the File:**
+    Click on the `index.html` file.
+
+4.  **CLICK the Pencil Icon:**
+    In the top-right corner of the file, click the **pencil icon (✏️)** to "Edit this file".
+
+5.  **DELETE the Old Code:**
+
+      * Click inside the big text editor.
+      * Press **Ctrl+A** (on Windows) or **Cmd+A** (on Mac) to **Select ALL** the old text.
+      * Press the **Delete** or **Backspace** key. The entire file should now be empty.
+
+6.  **PASTE the New Code:**
+    Press **Ctrl+V** (on Windows) or **Cmd+V** (on Mac) to paste the new, correct code into the empty file.
+
+7.  **SAVE the File:**
+
+      * Scroll to the bottom of the page.
+      * Click the green "**Commit changes**" button.
+
+After 60 seconds, refresh your website. It will be fixed.
+
+-----
+
+## 🚀 The Correct `index.html` File (Copy This Entire Block)
+
+```html
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -71,10 +116,10 @@
             margin-right: 1.5rem; /* Space between "Hi," and "Welcome" */
         }
         
-        /* NEW: Style for the "Welcome" GIF (made larger) */
+        /* Style for the "Welcome" GIF */
         .hero-title-container img {
-            height: 850px; /* Increased height */
-            width: 900px;  /* Increased width */
+            height: 99px; /* The height from your <img> tag */
+            width: 111px; /* The width from your <img> tag */
             position: relative;
             top: -10px; 
         }
@@ -502,3 +547,4 @@
 
 </body>
 </html>
+```
