Update styles and content in index.html

--- a/index.html
+++ b/index.html
@@ -117,6 +117,12 @@
             font-size: 1.1rem;
             line-height: 1.7;
         }
+        #about h3 {
+            font-family: 'Wix Madefor Text', sans-serif;
+            font-weight: 600;
+            margin-top: 2rem;
+            margin-bottom: 1rem;
+        }
         
         /* --- 5. Projects Section --- */
         .project-item {
@@ -143,19 +149,23 @@
             padding: 8px 20px;
         }
 
-        /* --- 6. Footer --- */
+        /* --- 6. Education Section --- */
+        #education {
+            background-color: #f8f9fa; /* Light grey background */
+        }
+
+        /* --- 7. Footer --- */
         footer {
-            background-color: #f8f9fa;
-            color: #333;
+            background-color: #343a40;
+            color: #ccc;
             padding: 60px 0;
         }
         footer h3 {
-            font-family: 'Wix Madefor Text', sans-serif;
             font-weight: 600;
-            color: #000;
+            color: #fff;
         }
         footer .social-links a {
-            color: #333;
+            color: white;
             font-size: 1.5rem;
             margin: 0 12px;
             transition: color 0.3s ease;
@@ -164,7 +174,7 @@
             color: #0d6efd;
         }
         footer .footer-link {
-            color: #333;
+            color: #fff;
             text-decoration: none;
             font-weight: 500;
             transition: color 0.2s ease;
@@ -209,7 +219,7 @@
                 </div>
                 
                 <p class="lead">I'm Pratik Khadka.</p>
-                <h2>MSc Student in Embedded Intelligence & IoT Systems</h2>
+                <h2 class="mb-4">MSc Student in Embedded Intelligence & IoT Systems</h2>
                 <p class="summary">
                     Passionate about transforming IoT technologies into innovative digital solutions for Smart Cities, Agriculture 4.0, and Sustainability.
                 </p>
@@ -221,10 +231,13 @@
                 <div class="row">
                     <div class="col-lg-8">
                         <h2 class="section-title">About Me</h2>
-                        <p class="lead">Erasmus Mundus MSc student in Embedded Intelligence and IoT Systems, passionate about transforming loT technologies into innovative digital solutions.</p>
+                        <p>Erasmus Mundus MSc student in Embedded Intelligence and IoT Systems, passionate about transforming loT technologies into innovative digital solutions.</p>
                         <p>My background combines embedded hardware experience with an interest in loT-driven business models, smart services, and data analytics.</p>
                         <p>Experienced in STM32, ESP32, LoRaWAN, and Zigbee, I focus on connecting devices to cloud platforms for automation and insight generation. I am particularly interested in how loT can support digital innovation, sustainability, and the development of connected business ecosystems.</p>
                         <p class="fw-bold">Currently in my 3rd semester at the University of Orléans, France, and actively seeking an internship for my 4th-semester thesis.</p>
+
+                        <h3>My Approach</h3>
+                        <p>My approach focuses on the full stack of IoT development, from low-level hardware integration to cloud-based data analysis. I enjoy iterating on prototypes, collaborating with cross-functional teams, and striving to create products that have a real, positive impact on their users and the environment.</p>
                     </div>
                     <div class="col-lg-4">
                         <h2 class="section-title">Education</h2>
@@ -306,15 +319,14 @@
 
     <footer id="contact" class="pt-5 pb-5">
         <div class="container">
-            <div class="row">
+             <div class="row">
                 <div class="col-lg-6 text-center text-lg-start mb-4 mb-lg-0">
-                    <h3>Get In Touch</h3>
+                    <h2 class="section-title">Contact</h2>
                     <p>I'm currently seeking internship opportunities for my Master's thesis (starting early 2026). <br> Let's build something innovative together.</p>
-                    <p class="mb-0"><strong>Email:</strong> <a href="mailto:pratik010khadka@gmail.com" class="footer-link">pratik010khadka@gmail.com</a></p>
+                    <p class="mb-1"><strong>Email:</strong> <a href="mailto:pratik010khadka@gmail.com" class="footer-link">pratik010khadka@gmail.com</a></p>
                     <p class="mb-0"><strong>Phone:</strong> <a href="tel:+33782721215" class="footer-link">(+33) 782721215</a></p>
                 </div>
-                <div class="col-lg-6 text-center text-lg-end">
-                    <h3 class="mb-3">Find Me On</h3>
+                <div class="col-lg-6 text-center text-lg-end align-self-center">
                     <div class="social-links mb-3">
                         <a href="https://www.linkedin.com/in/pratik-khadka-21837416a/" target="_blank" aria-label="LinkedIn" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
                         <a href="https://github.com/pratik001010" target="_blank" aria-label="GitHub" title="GitHub"><i class="fab fa-github"></i></a>
