--- a/index.html
+++ b/index.html
@@ -492,7 +492,11 @@
 
         <section id="ai-bot" style="padding-bottom: 60px;">
             <div class="container">
-                <h2 class="section-title">🤖 Ask My AI Bot</h2>
+                
+                <h2 class="section-title">
+                    <img src="images/pratikchatbot.gif" alt="AI Bot" style="height: 100px; vertical-align: middle; margin-right: 10px; background-color: white;">
+                    Ask My AI Bot
+                </h2>
                 <p class="lead" style="font-size: 1.1rem; color: #6c757d;">You can ask about my skills, projects, or even for a creative idea!</p>
                 
                 <div class="input-group mb-3">
