new feed,html created

--- a/index.html
+++ b/index.html
@@ -609,38 +609,17 @@
             </div>
         </section>
 
-        <section id="curiosity-feed">
-            <div class="container">
-                <h2 class="section-title">My Curiosity Feed</h2>
-                <p class="lead" style="font-size: 1.1rem; color: #6c757d;">
-                    My personal favorite, for "things that fascinated me.
-                </p>
-                
-                <div id="feed-container">
-                    <div class="text-center">
-                        <div class="spinner-border text-primary" role="status">
-                            <span class="visually-hidden">Loading...</span>
-                        </div>
-                        <p class="mt-2">Loading feed...</p>
-                    </div>
-                </div>
-
-                <template id="feed-item-template">
-                    <div class="feed-item-card">
-                        <img class="feed-thumbnail" alt="Video Thumbnail">
-                        <div class="card-body">
-                            <h3 class="feed-title"></h3>
-                            <p class="feed-category"></p>
-                            <p class="feed-description"></p>
-                            <a href="#" target="_blank" class="btn btn-outline-primary feed-link">
-                                <i class="fas fa-book-open"></i> <span>Read More</span>
-                            </a>
-                        </div>
-                    </div>
-                </template>
-
-            </div>
-        </section>
+ <section class="bg-light pt-5 pb-5">
+    <div class="container text-center">
+        <h2 class="section-title mb-4" style="text-align: center;">Explore My Curiosity Feed</h2>
+        <p class="lead mb-4">
+            View my latest discoveries, videos, and articles that I'm currently exploring.
+        </p>
+        <a href="feed.html" target="_blank" class="btn btn-primary btn-lg" style="border-radius: 25px;">
+            Open Full Feed <i class="fas fa-external-link-alt ms-2"></i>
+        </a>
+    </div>
+</section>
         <section id="ai-bot" style="padding-bottom: 60px;">
             <div class="container">
                 
