--- a/feed.html
+++ b/feed.html
@@ -92,7 +92,7 @@
     <div class="container">
         <div class="row justify-content-center">
             <div class="col-12 text-center mb-5">
-                <h1 class="page-title">Embedded Insights</h1>
+                <h1 class="page-title">My Curiosity Feed</h1>
                 <p class="lead" style="font-size: 1.25rem;">
                     My personal feed for things that fascinate me.
                 </p>
