--- a/index.html
+++ b/index.html
@@ -556,7 +556,7 @@
                 
                 <h2 class="section-title">
                     <img src="images/pratikchatbot.gif" alt="AI Bot" style="height: 100px; vertical-align: middle; margin-right: 10px; background-color: white;">
-                    Ask My AI Bot
+                    Pratiks AI-Bot
                 </h2>
 
                 <p class="lead" style="font-size: 1.1rem; color: #6c757d;">You can ask about my skills, projects, or even for a creative idea!</p>
