--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@
                 <div class="col-lg-6 text-center text-lg-start mb-4 mb-lg-0">
                     <h2 class="section-title">Contact</h2>
                     <p>I'm always open to discussing new projects, research opportunities, or collaborations in IoT , robotics, AI, and automation. <br> Let's build something innovative together.</p>
-                    <p class="mb-1"><strong>Email:</strong> <a href="mailto:contact@meetpratik.me" class="footer-link">contact@meetpratik.me</a></p>
+                    <p class="mb-1"><strong>Email:</strong> <a href="mailto:eng.pratikkhadka@meetpratik.me" class="footer-link">Eng.pratikkhadka@meetpratik.me</a></p>
                     <p class="mb-0"><strong>Phone:</strong> <a href="tel:+33782721215" class="footer-link">(+33) 782721215</a></p>
                 </div>
                 <div class="col-lg-6 text-center text-lg-end align-self-center">
