new social section addede

--- a/index.html
+++ b/index.html
@@ -97,6 +97,24 @@
             margin-left: auto;
             margin-right: auto;
         }
+        
+        /* --- NEW SOCIAL LINKS STYLES --- */
+        .social-links-hero {
+            text-align: center;
+            margin-top: 30px; /* Adds space below the summary */
+        }
+        .social-links-hero a {
+            color: #212529; /* Dark text color */
+            font-size: 1.75rem; /* Icon size */
+            margin: 0 15px; /* Spacing between icons */
+            transition: color 0.3s ease;
+            text-decoration: none; /* Remove underline */
+        }
+        .social-links-hero a:hover {
+            color: #0d6efd; /* Primary blue on hover */
+        }
+        /* --- END NEW SOCIAL LINKS STYLES --- */
+
         .scrolling-banner {
             overflow: hidden;
             padding: 1.5rem 0;
@@ -385,7 +403,14 @@
                 <p class="summary text-center mx-auto">
                     Passionate about transforming IoT technologies into innovative digital solutions for Smart Cities, Agriculture 4.0, and Sustainability.
                 </p>
-            </div>
+
+                <div class="social-links-hero">
+                    <a href="mailto:Eng.pratikkhadka@meetpratik.me" target="_blank" aria-label="Email" title="Email"><i class="fas fa-envelope"></i></a>
+                    <a href="https://github.com/pratik001010" target="_blank" aria-label="GitHub" title="GitHub"><i class="fab fa-github"></i></a>
+                    <a href="https://wa.me/306943722335" target="_blank" aria-label="WhatsApp" title="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+                    <a href="https://www.linkedin.com/in/pratik-khadka-21837416a/" target="_blank" aria-label="LinkedIn" title="LinkedIn"><i class="fab fa-linkedin"></i></a> 
+                </div>
+                </div>
         </section>
 
         <div class="scrolling-banner">
@@ -580,20 +605,21 @@
     <footer id="contact" class="pt-5 pb-5">
         <div class="container">
              <div class="row">
-                <div class="col-lg-6 text-center text-lg-start mb-4 mb-lg-0">
-                    <h2 class="section-title">Contact</h2>
-                    <p>I'm always open to discussing new projects, research opportunities, or collaborations in IoT , robotics, AI, and automation. <br> Let's build something innovative together.</p>
-                    <p class="mb-1"><strong>Email:</strong> <a href="mailto:eng.pratikkhadka@meetpratik.me" class="footer-link">Eng.pratikkhadka@meetpratik.me</a></p>
-                    <p class="mb-0"><strong>Phone:</strong> <a href="tel:+33782721215" class="footer-link">(+33) 782721215</a></p>
-                </div>
-                <div class="col-lg-6 text-center text-lg-end align-self-center">
-                    <h3 class="mb-3">Find Me On</h3>
-                    <div class="social-links mb-3">
-                        <a href="https://www.linkedin.com/in/pratik-khadka-21837416a/" target="_blank" aria-label="LinkedIn" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
-                        <a href="https://github.com/pratik001010" target="_blank" aria-label="GitHub" title="GitHub"><i class="fab fa-github"></i></a>
-                    </div>
-                    <p class="mt-4"><small>&copy; 2025 Pratik Khadka. All rights reserved.</small></p>
-                </div>
+                 <div class="col-lg-6 text-center text-lg-start mb-4 mb-lg-0">
+                     <h2 class="section-title">Contact</h2>
+                     <p>I'm always open to discussing new projects, research opportunities, or collaborations in IoT , robotics, AI, and automation. <br> Let's build something innovative together.</p>
+                     <p class="mb-1"><strong>Email:</strong> <a href="mailto:eng.pratikkhadka@meetpratik.me" class="footer-link">Eng.pratikkhadka@meetpratik.me</a></p>
+                     <p class="mb-0"><strong>Phone:</strong> <a href="tel:+33782721215" class="footer-link">(+33) 782721215</a></p>
+                 </div>
+                 <div class="col-lg-6 text-center text-lg-end align-self-center">
+                     <h3 class="mb-3">Find Me On</h3>
+                     <div class="social-links mb-3">
+                         <a href="https://www.linkedin.com/in/pratik-khadka-21837416a/" target="_blank" aria-label="LinkedIn" title="LinkedIn"><i class="fab fa-linkedin"></i></a>
+                         <a href="https://github.com/pratik001010" target="_blank" aria-label="GitHub" title="GitHub"><i class="fab fa-github"></i></a>
+                         <a href="https://wa.me/306943722335" target="_blank" aria-label="WhatsApp" title="WhatsApp"><i class="fab fa-whatsapp"></i></a>
+                     </div>
+                     <p class="mt-4"><small>&copy; 2025 Pratik Khadka. All rights reserved.</small></p>
+                 </div>
             </div>
         </div>
         
