--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:wght@700&family=Wix+Madefor+Text:wght@400;500;700&display=swap" rel="stylesheet">
 
     <style>
-        /* Minimalist & Professional Stylesheet */
+        /* Minimalist & Professional Stylesheet tr*/
         body {
             font-family: 'Wix Madefor Text', -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, sans-serif;
             background-color: #ffffff;
